[package]
name = "devpurge"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
dialoguer = "0.10"
indicatif = "0.17"
human_bytes = "0.4"
anyhow = "1.0"
console = "0.15"
clap = { version = "4.5.56", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
directories = "6.0.0"
